fixes scrollbar issue over topology on file drag

--- a/frontend/packages/topology/src/components/page/TopologyView.scss
+++ b/frontend/packages/topology/src/components/page/TopologyView.scss
@@ -90,6 +90,7 @@
   &__dropzone {
     background-color: rgba(0, 102, 204, 0.1) !important;
     color: var(--pf-global--palette--black-900) !important;
+    margin:0 !important;
   }
 
   &__dropzone-text {
